kube-services/clusterip-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one-ci  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one
