kube-services/loadbalancer-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one-lb  
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one
