kube-services/nodeport-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one-np  
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one
